--- a/components/RunningStyleTable.module.css
+++ b/components/RunningStyleTable.module.css
@@ -163,6 +163,7 @@
     .table {
       font-size: 13px;
       min-width: 500px;
+      table-layout: fixed;
     }
     
     .table th,
